@@ -20,6 +20,7 @@ import org.joda.time.Interval;
 
 import com.almende.eve.agent.AgentFactory;
 import com.almende.eve.context.Context;
+import com.almende.eve.rpc.SystemParams;
 import com.almende.eve.rpc.jsonrpc.JSONRPCException;
 import com.almende.eve.rpc.jsonrpc.JSONRequest;
 import com.fasterxml.jackson.core.JsonParseException;
@@ -162,8 +163,8 @@ public class RunnableSchedulerFactory implements SchedulerFactory {
 				@Override
 				public void run() {
 					try {
-						String senderUrl = null; // TODO: provide a senderUrl
-						agentFactory.invoke(senderUrl, agentId, request);
+						SystemParams params = null; // TODO: provide a senderUrl
+						agentFactory.invoke(agentId, request, params);
 					} catch (Exception e) {
 						e.printStackTrace();
 					} finally {
